# opentelemetry-c-demo

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.proxy  Dockerfile.server  README.md  client.Dockerfile  docker-compose.yml  proxy.Dockerfile  run.sh  server.Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/: constants.h  prime.h  zhelpers.h
lib/opentelemetry-c/: CMakeLists.txt
lib/opentelemetry-c/examples/basic/: CMakeLists.txt
lib/opentelemetry-c/include/: opentelemetry-c.h
lib/opentelemetry-c/include/utils/: lttng_span_exporter.h  lttng_span_exporter_lttng_tracepoint.h
lib/opentelemetry-c/src/: opentelemetry-c.cpp
lib/opentelemetry-c/src/utils/: lttng_span_exporter.cpp
src/: client.c  context.c  prime.c  proxy.c  server.c
